--- a/src/pages/fighter.html
+++ b/src/pages/fighter.html
@@ -26,7 +26,7 @@
 						<div class="ads ads_sm mt-space-md mt-sm-3">Рекламный банер</div>
 						<div class="fighter-data__row mt-small-1">
 							<div class="fighter-data__avatar">
-								<img src="../../public/images/fighter-5.jpg" alt="avatar" class="fighter-data__image">
+								<img loading="lazy" src="../../public/images/fighter-5.jpg" alt="avatar" class="fighter-data__image">
 							</div>
 							<div class="fighter-data__info fighter-info">
 								<div class="fighter-info__item info-item">
