--- a/src/pages/header2.html
+++ b/src/pages/header2.html
@@ -17,7 +17,7 @@
 			<nav class="navbar-main navbar-expand-lg pl-0" id="header-nav">
 				<div class="navbar-main__left">
 					<a class="navbar-brand" href="#">
-						<img src="../../public/images/logo.jpg" class="d-inline-block align-top" alt="" loading="lazy">
+						<img loading="lazy" src="../../public/images/logo.jpg" class="d-inline-block align-top" alt="" loading="lazy">
 					</a>
 					<ul class="social-links white border-blue-dark" id="social-link"
 							data-lg-after="navbar-menu">
@@ -79,7 +79,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -100,7 +100,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -121,7 +121,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -142,7 +142,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -163,7 +163,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -196,7 +196,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -217,7 +217,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -238,7 +238,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -259,7 +259,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -280,7 +280,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
