--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,7 @@
 	<meta name="Description" content="Put your description here.">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Main</title>
-	<link rel="stylesheet" href="../styles/main.scss">
+<!--	<link as="style" rel="preload" href="../styles/main.scss">-->
 </head>
 <body style="overflow-x:hidden;">
 <noscript>
@@ -22,7 +22,7 @@
 			<nav class="navbar-main navbar-expand-lg pl-0" id="header-nav">
 				<div class="navbar-main__left">
 					<a class="navbar-brand" href="#">
-						<img src="../../public/images/logo.jpg" class="d-inline-block align-top" alt="" loading="lazy">
+						<img loading="lazy" src="../../public/images/logo.jpg" class="d-inline-block align-top" alt="" loading="lazy">
 					</a>
 					<ul class="social-links white border-blue-dark" id="social-link"
 							data-lg-after="navbar-menu">
@@ -81,7 +81,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -102,7 +102,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -123,7 +123,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -144,7 +144,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -165,7 +165,7 @@
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
-														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+														<img loading="lazy" src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
 													</div>
 													<div class="message-item__left">
 														<div class="message-item__row">
@@ -334,7 +334,7 @@
 							<!-- Slides -->
 							<div class="swiper-slide">
 								<div class="post-preview post-preview_board">
-									<img src="../../public/images/konor.jpg" class="post-preview__image" alt="image konor makgregor">
+									<img loading="lazy" src="../../public/images/konor.jpg" class="post-preview__image" alt="image konor makgregor">
 									<div class="post-preview__header">
 										<div class="label label_red label_text-white label_text-md-red">MMA</div>
 										<a href="#" class="post-preview__title">Конор Макгрегор - Дональд Серроне. Прогноз на главный бой
@@ -348,7 +348,7 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="post-preview post-preview_board">
-									<img src="../../public/images/konor257.jpeg" class="post-preview__image" alt="image konor makgregor">
+									<img loading="lazy" src="../../public/images/konor257.jpeg" class="post-preview__image" alt="image konor makgregor">
 									<div class="post-preview__header">
 										<div class="label label_red label_text-white label_text-md-red">MMA</div>
 										<a href="#" class="post-preview__title">Слова Дастина Порье после победы над Конором МакГрегором в
@@ -1111,7 +1111,7 @@
 					<div class="tab-content mt-4" id="nav-tabContent2">
 						<div class="tab-pane fade show active" id="nav-all-2" role="tabpanel" aria-labelledby="list-all-list">
 							<div class="post-preview post-preview_board mx-n3 mx-sm-auto">
-								<img src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
+								<img loading="lazy" src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
 								<div class="post-preview__header">
 									<div class="post-preview__row">
 										<div class="label label_red label_text-white label_text-md-red ">MMA</div>
@@ -1140,7 +1140,7 @@
 							</div>
 							<div class="post-list mt-3">
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -1177,7 +1177,7 @@
 									</div>
 								</div>
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-box-icon-label							-->
@@ -1218,7 +1218,7 @@
 
 						<div class="tab-pane fade" id="nav-mma-2" role="tabpanel" aria-labelledby="list-mma-list">
 							<div class="post-preview post-preview_board mx-n3 mx-sm-auto">
-								<img src="../../public/images/konor.jpg" class="post-preview__image" alt="image fighter">
+								<img loading="lazy" src="../../public/images/konor.jpg" class="post-preview__image" alt="image fighter">
 								<div class="post-preview__header">
 									<div class="post-preview__row">
 										<div class="label label_red label_text-white label_text-md-red ">MMA</div>
@@ -1249,7 +1249,7 @@
 
 							<div class="post-list mt-3">
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -1284,7 +1284,7 @@
 									</div>
 								</div>
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -1324,7 +1324,7 @@
 						</div>
 						<div class="tab-pane fade" id="nav-box-2" role="tabpanel" aria-labelledby="list-box-list">
 							<div class="post-preview post-preview_board mx-n3 mx-sm-auto">
-								<img src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
+								<img loading="lazy" src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
 								<div class="post-preview__header">
 									<div class="post-preview__row">
 										<div class="label label_green label_text-white label_text-md-green ">БОКС</div>
@@ -1352,7 +1352,7 @@
 
 							<div class="post-list mt-3">
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-box-icon-label							-->
@@ -1390,7 +1390,7 @@
 									</div>
 								</div>
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-box-icon-label							-->
@@ -1487,7 +1487,7 @@
 											<div class="swiper-slide">
 												<div class="post-preview post-preview_video post-preview_video-sm">
 													<div class="post-preview__image-wrapper">
-														<img src="../../public/images/image-video.jpg" class="post-preview__image"
+														<img loading="lazy" src="../../public/images/image-video.jpg" class="post-preview__image"
 																 alt="image - preview video">
 													</div>
 													<div class="post-preview__main">
@@ -1525,7 +1525,7 @@
 											<div class="swiper-slide">
 												<div class="post-preview post-preview_video post-preview_video-sm">
 													<div class="post-preview__image-wrapper">
-														<img src="../../public/images/image-video.jpg" class="post-preview__image"
+														<img loading="lazy" src="../../public/images/image-video.jpg" class="post-preview__image"
 																 alt="image - preview video">
 													</div>
 													<div class="post-preview__main">
@@ -1563,7 +1563,7 @@
 											<div class="swiper-slide">
 												<div class="post-preview post-preview_video post-preview_video-sm">
 													<div class="post-preview__image-wrapper">
-														<img src="../../public/images/image-video.jpg" class="post-preview__image"
+														<img loading="lazy" src="../../public/images/image-video.jpg" class="post-preview__image"
 																 alt="image - preview video">
 													</div>
 													<div class="post-preview__main">
@@ -1704,7 +1704,7 @@
 
 								<div class="fighter-category__company">UFC</div>
 							</div>
-							<img src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
+							<img loading="lazy" src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
 							<div class="fighter-category__info">
 								<div class="fighter-category__title">Конор Макгрегор</div>
 								<div class="fighter-category__text">
@@ -1726,7 +1726,7 @@
 													viewBox="0 0 37 37"></svg-flag>
 								<div class="fighter-category__company">UFC</div>
 							</div>
-							<img src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
+							<img loading="lazy" src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
 							<div class="fighter-category__info">
 								<div class="fighter-category__title">Конор Макгрегор</div>
 								<div class="fighter-category__text">
@@ -1748,7 +1748,7 @@
 													viewBox="0 0 37 37"></svg-flag>
 								<div class="fighter-category__company">UFC</div>
 							</div>
-							<img src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
+							<img loading="lazy" src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
 							<div class="fighter-category__info">
 								<div class="fighter-category__title">Конор Макгрегор</div>
 								<div class="fighter-category__text">
@@ -1769,7 +1769,7 @@
 													viewBox="0 0 37 37"></svg-flag>
 								<div class="fighter-category__company">UFC</div>
 							</div>
-							<img src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
+							<img loading="lazy" src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
 							<div class="fighter-category__info">
 								<div class="fighter-category__title">Конор Макгрегор</div>
 								<div class="fighter-category__text">
@@ -1790,7 +1790,7 @@
 													viewBox="0 0 37 37"></svg-flag>
 								<div class="fighter-category__company">UFC</div>
 							</div>
-							<img src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
+							<img loading="lazy" src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
 							<div class="fighter-category__info">
 								<div class="fighter-category__title">Конор Макгрегор</div>
 								<div class="fighter-category__text">
@@ -1811,7 +1811,7 @@
 													viewBox="0 0 37 37"></svg-flag>
 								<div class="fighter-category__company">UFC</div>
 							</div>
-							<img src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
+							<img loading="lazy" src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
 							<div class="fighter-category__info">
 								<div class="fighter-category__title">Конор Макгрегор</div>
 								<div class="fighter-category__text">
@@ -1832,7 +1832,7 @@
 													viewBox="0 0 37 37"></svg-flag>
 								<div class="fighter-category__company">UFC</div>
 							</div>
-							<img src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
+							<img loading="lazy" src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
 							<div class="fighter-category__info">
 								<div class="fighter-category__title">Конор Макгрегор</div>
 								<div class="fighter-category__text">
@@ -1853,7 +1853,7 @@
 													viewBox="0 0 37 37"></svg-flag>
 								<div class="fighter-category__company">UFC</div>
 							</div>
-							<img src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
+							<img loading="lazy" src="../../public/images/konor-mini.png" class="fighter-category__image" alt="konor">
 							<div class="fighter-category__info">
 								<div class="fighter-category__title">Конор Макгрегор</div>
 								<div class="fighter-category__text">
@@ -2487,7 +2487,7 @@
 					<div class="tab-content mt-4 " id="myTabContentNews-7">
 						<div class="tab-pane fade show active" id="nav-last-7" role="tabpanel" aria-labelledby="list-all-list">
 							<div class="post-preview post-preview_board mx-n3 mx-sm-auto">
-								<img src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
+								<img loading="lazy" src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
 								<div class="post-preview__header">
 									<div class="post-preview__row">
 										<div class="label label_red label_text-white label_text-md-red ">MMA</div>
@@ -2516,7 +2516,7 @@
 							<div class="post-list mt-3">
 
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -2553,7 +2553,7 @@
 									</div>
 								</div>
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -2595,7 +2595,7 @@
 
 						<div class="tab-pane fade" id="nav-mma-7" role="tabpanel" aria-labelledby="list-mma-list">
 							<div class="post-preview post-preview_board mx-n3 mx-sm-auto">
-								<img src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
+								<img loading="lazy" src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
 								<div class="post-preview__header">
 									<div class="post-preview__row">
 										<div class="label label_red label_text-white label_text-md-red ">MMA</div>
@@ -2623,7 +2623,7 @@
 							</div>
 							<div class="post-list mt-3">
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -2660,7 +2660,7 @@
 									</div>
 								</div>
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -2701,7 +2701,7 @@
 						</div>
 						<div class="tab-pane fade" id="nav-box-7" role="tabpanel" aria-labelledby="list-box-list">
 							<div class="post-preview post-preview_board mx-n3 mx-sm-auto">
-								<img src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
+								<img loading="lazy" src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
 								<div class="post-preview__header">
 									<div class="post-preview__row">
 										<div class="label label_green label_text-white label_text-md-green ">БОКС</div>
@@ -2729,7 +2729,7 @@
 							</div>
 							<div class="post-list mt-3">
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -2766,7 +2766,7 @@
 									</div>
 								</div>
 								<div class="post-preview post-preview_column">
-									<img src="../../public/images/konor.jpg" alt="" class="post-preview__image">
+									<img loading="lazy" src="../../public/images/konor.jpg" alt="" class="post-preview__image">
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -4169,7 +4169,7 @@
 				<div
 					class="col-lg-2 d-flex flex-row flex-wrap flex-md-row flex-lg-column justify-content-center justify-content-sm-between justify-content-lg-start">
 					<a class="navbar-brand mb-3" href="#">
-						<img src="../../public/images/logo.jpg" class="d-inline-block align-top" alt="" loading="lazy">
+						<img loading="lazy" src="../../public/images/logo.jpg" class="d-inline-block align-top" alt="" loading="lazy">
 					</a>
 					<div class="footer-nav__conf d-inline-block d-md-none order-sm-2">
 						<div class="footer-nav__cop">&copy; FightNews 2020</div>
@@ -4301,6 +4301,7 @@
 
 </footer>
 
-<script src="../scripts/main.js"></script>
+<link  rel="stylesheet" href="../styles/main.scss">
+<script async src="../scripts/main.js"></script>
 </body>
 </html>
