--- a/src/pages/profile-message.html
+++ b/src/pages/profile-message.html
@@ -26,7 +26,7 @@
 					<div class="user-profile mt-5">
 						<div class="user-profile__row-image">
 							<div class="user-profile__image-wrapper">
-								<img src="../../public/images/ava-3.jpg" alt="user avatar" class="user-profile__image">
+								<img loading="lazy" src="../../public/images/ava-3.jpg" alt="user avatar" class="user-profile__image">
 							</div>
 						</div>
 
