--- a/src/pages/updates.html
+++ b/src/pages/updates.html
@@ -367,11 +367,11 @@
 										<div class="comments-item__header">
 											<div class="comments-item__col">
 												<div class="comments-item__avatar">
-													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
+													<img loading="lazy" src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 												</div>
 												<div class="d-inline mr-2">
 													<a class="comments-item__name" href="#">hrost</a>
-													<img src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
+													<img loading="lazy" src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
 													<a class="comments-item__name" href="#">HiTMAN</a>
 												</div>
 												<div class="comments-item__text-wrapper d-inline">
@@ -407,56 +407,56 @@
 
 													<ul class="like-list">
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
@@ -480,11 +480,11 @@
 										<div class="comments-item__header">
 											<div class="comments-item__col">
 												<div class="comments-item__avatar">
-													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
+													<img loading="lazy" src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 												</div>
 												<div class="d-inline mr-2">
 													<a class="comments-item__name" href="#">hrost</a>
-													<img src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
+													<img loading="lazy" src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
 													<a class="comments-item__name" href="#">HiTMAN</a>
 												</div>
 												<div class="comments-item__text-wrapper d-inline">
@@ -525,56 +525,56 @@
 
 													<ul class="like-list">
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
@@ -597,11 +597,11 @@
 										<div class="comments-item__header">
 											<div class="comments-item__col">
 												<div class="comments-item__avatar">
-													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
+													<img loading="lazy" src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 												</div>
 												<div class="d-inline mr-2">
 													<a class="comments-item__name" href="#">hrost</a>
-													<img src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
+													<img loading="lazy" src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
 													<a class="comments-item__name" href="#">HiTMAN</a>
 												</div>
 												<div class="comments-item__text-wrapper d-inline">
@@ -636,56 +636,56 @@
 
 													<ul class="like-list">
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
@@ -708,11 +708,11 @@
 										<div class="comments-item__header">
 											<div class="comments-item__col">
 												<div class="comments-item__avatar">
-													<img src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
+													<img loading="lazy" src="../../public/images/konor.jpg" class="comments-item__image" alt="avatar">
 												</div>
 												<div class="d-inline mr-2">
 													<a class="comments-item__name" href="#">hrost</a>
-													<img src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
+													<img loading="lazy" src="../../public/icons/arrowlink.svg" class="ml-2 mr-2" alt="arrow">
 													<a class="comments-item__name" href="#">HiTMAN</a>
 												</div>
 												<div class="comments-item__text-wrapper d-inline">
@@ -753,56 +753,56 @@
 
 													<ul class="like-list">
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img src="../../public/images/ava-2.jpg"
+															<a href="#" class="like-list__link" title="user"><img loading="lazy" src="../../public/images/ava-2.jpg"
 																																										alt="avatar"></a>
 														</li>
 														<li class="like-list__item">
-															<a href="#" class="like-list__link" title="user"><img
+															<a href="#" class="like-list__link" title="user"><img loading="lazy"
 																src="../../public/images/konor-mini.png"
 																alt="avatar"></a>
 														</li>
