--- a/src/pages/fighters.html
+++ b/src/pages/fighters.html
@@ -71,7 +71,7 @@
 							</div>
 							<div class="table__col table__col_image">
 								<div class="table__image">
-									<img src="../../public/images/konor-mini.png" class="image" alt="photo fighter">
+									<img loading="lazy" src="../../public/images/konor-mini.png" class="image" alt="photo fighter">
 								</div>
 							</div>
 							<div class="table__col table__col_name">
@@ -95,7 +95,7 @@
 							</div>
 							<div class="table__col table__col_image">
 								<div class="table__image">
-									<img src="../../public/images/konor-mini.png" class="image" alt="photo fighter">
+									<img loading="lazy" src="../../public/images/konor-mini.png" class="image" alt="photo fighter">
 								</div>
 							</div>
 							<div class="table__col table__col_name">
@@ -119,7 +119,7 @@
 							</div>
 							<div class="table__col table__col_image">
 								<div class="table__image">
-									<img src="../../public/images/konor-mini.png" class="image" alt="photo fighter">
+									<img loading="lazy" src="../../public/images/konor-mini.png" class="image" alt="photo fighter">
 								</div>
 							</div>
 							<div class="table__col table__col_name">
@@ -143,7 +143,7 @@
 							</div>
 							<div class="table__col table__col_image">
 								<div class="table__image">
-									<img src="../../public/images/konor-mini.png" class="image" alt="photo fighter">
+									<img loading="lazy" src="../../public/images/konor-mini.png" class="image" alt="photo fighter">
 								</div>
 							</div>
 							<div class="table__col table__col_name">
