--- a/src/pages/timetable-fighter.html
+++ b/src/pages/timetable-fighter.html
@@ -57,7 +57,7 @@
 															viewBox="0 0 20 20"></svg-icon>
 									</div>
 									<div class="duel-header__image">
-										<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+										<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 									</div>
 								</div>
 
@@ -75,7 +75,7 @@
 															viewBox="0 0 20 20"></svg-icon>
 									</div>
 									<div class="duel-header__image">
-										<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+										<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 									</div>
 								</div>
 							</div>
@@ -130,7 +130,7 @@
 																	viewBox="0 0 20 20"></svg-icon>
 											</div>
 											<div class="duel-header__image">
-												<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+												<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 											</div>
 										</div>
 
@@ -148,7 +148,7 @@
 																	viewBox="0 0 20 20"></svg-icon>
 											</div>
 											<div class="duel-header__image">
-												<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+												<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 											</div>
 										</div>
 									</div>
@@ -182,7 +182,7 @@
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
 										<div class="duel-header__image">
-											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+											<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 
@@ -200,7 +200,7 @@
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
 										<div class="duel-header__image">
-											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+											<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 								</div>
@@ -234,7 +234,7 @@
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
 										<div class="duel-header__image">
-											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+											<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 
@@ -252,7 +252,7 @@
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
 										<div class="duel-header__image">
-											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+											<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 								</div>
@@ -286,7 +286,7 @@
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
 										<div class="duel-header__image">
-											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+											<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 
@@ -304,7 +304,7 @@
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
 										<div class="duel-header__image">
-											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+											<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 								</div>
@@ -338,7 +338,7 @@
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
 										<div class="duel-header__image">
-											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+											<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 
@@ -356,7 +356,7 @@
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
 										<div class="duel-header__image">
-											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+											<img loading="lazy" src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 								</div>
